virtualfriends/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: virtual-friends-gke
spec:
  replicas: 2
  selector:
    matchLabels:
      app: virtual-friends
  template:
    metadata:
      labels:
        app: virtual-friends
    spec:
      containers:
      - name: virtual-friends-app
        # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
        # Replace $GCLOUD_PROJECT with your project ID.
        image: gcr.io/ysong-chat/flask-app:ecab40d-3ffccc53
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "300Mi"
            cpu: "300m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "500Mi"
            cpu: "500m"
            ephemeral-storage: "2Gi"
---
