virtualfriends/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: virtual-friends-nodeport
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "backend-config"}'
spec:
  selector:
    app: virtual-friends
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: https
    port: 443
    targetPort: 8080
