virtualfriends/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-friends-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: virtual-friends-cert-new
spec:
  rules:
  - host: virtualfriends.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: virtual-friends-nodeport
            port:
              number: 80
  - host: virtualfriends.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: virtual-friends-nodeport
            port:
              number: 443
